<resources>
    <string name="app_name">Appetite</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--  String of Pay Window -->
    <string name="type_card">Opción de Pago</string>
    <string name="name_property">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="expiration_date">Fecha de Vencimiento</string>
    <string name="card_numer">Número de tarjeta</string>
    <string name="mail">Correo</string>
    <string name="check_mail">Verificación de Correo</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="confirm_pay">Confimar Pago</string>

    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_opciones">MenuOpciones</string>
    <string name="security_code">Código de Seguridad</string>

    <!--  String of buy Window -->
    <string name="list_product">Orden de Compra</string>
    <string name="confimation_code">Código de Confirmación:</string>
    <string name="code">7777</string>

    <!-- Strings for Reservación -->
    <string name="sucursal_prompt">Escoja su Sucursal</string>
    <string name="horario_entrada">Horario de Entrada:</string>
    <string name="sucursal_label">Sucursal:</string>
    <string name="personas_label">Personas:</string>
    <string name="horario_salida">Horario de Salida:</string>
    <string name="nota_reservacion">Se cobrara extra si se permanece más de 2 horas.</string>
    <string name="btn_asiento">Asiento</string>
    <string name="menu_opciones">Ver Menú</string>
    <string name="btn_horarioSalida">Seleccionar Horario de Salida</string>
    <string name="btn_horarioEntrada">Seleccionar Horario de Entrada</string>
    <string name="resv_fecha">Fecha:</string>
    <string name="rsv_fecha">Cambiar Fecha</string>

    <string-array name="sucursal_arrays">
        <item>Anahuac</item>
        <item>Las Puentes</item>
        <item>Cumbres</item>
    </string-array>
</resources>
