<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Indigo"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/type_card"
            style="@style/AppTheme.Text_Pago"
            android:text="@string/type_card" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:background="@color/Deep_Indigo">

            <RadioGroup
                style="@style/RadioGroup_Pago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:layout_marginTop="15sp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/paypal_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/Light_Indigo"
                    android:checked="true"
                    android:drawableRight="@drawable/paypal"
                    android:onClick="onClick" />

                <RadioButton
                    android:id="@+id/visa_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/Light_Indigo"
                    android:drawableRight="@drawable/visa"
                    android:onClick="onClick" />

                <RadioButton
                    android:id="@+id/master_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/Light_Indigo"
                    android:drawableRight="@drawable/master"
                    android:onClick="onClick" />
            </RadioGroup>
        </FrameLayout>

        <TextView
            style="@style/AppTheme.Text_Pago"
            android:text="@string/name_property" />

        <EditText
            style="@style/AppTheme.EditText_Pago"
            android:hint="@string/name_property"
            android:focusable="false" />

        <EditText
            style="@style/AppTheme.EditText_Pago"
            android:hint="@string/last_name" />

        <TextView
            style="@style/AppTheme.Text_Pago"
            android:text="@string/card_numer" />

        <EditText
            style="@style/AppTheme.EditText_Pago"
            android:hint="@string/card_numer"
            android:maxLength="16"
            android:inputType="numberPassword" />

        <TextView
            style="@style/AppTheme.Text_Pago"
            android:text="@string/expiration_date" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                style="@style/AppTheme.EditText_Pago"
                android:layout_width="90dp"
                android:layout_gravity="left|top"
                android:hint="@string/month"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                style="@style/AppTheme.EditText_Pago"
                android:layout_width="93dp"
                android:layout_gravity="center_horizontal|top"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4" />
        </FrameLayout>

        <TextView
            style="@style/AppTheme.Text_Pago"
            android:text="@string/security_code" />

        <EditText
            style="@style/AppTheme.EditText_Pago"
            android:hint="@string/security_code"
            android:inputType="numberPassword"
            android:maxLength="3"/>

        <TextView
            style="@style/AppTheme.Text_Pago"
            android:text="@string/mail" />

        <EditText
            style="@style/AppTheme.EditText_Pago"
            android:hint="@string/mail" />

        <Button
            android:id="@+id/confirm_pay_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/rounded_corner"
            android:onClick="onClick"
            android:text="@string/confirm_pay" />
    </LinearLayout>
</ScrollView>